[workspace]
members = [".", "crates/*", "crates/multibase/cli"]
resolver = "2"

[package]
name = "multicrates"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
multicrates = { path = "." }
multibase = { path = "crates/multibase" }
multicodec = { path = "crates/multicodec" }
multihash = { path = "crates/multihash" }
multisig = { path = "crates/multisig" }
multitrait = { path = "crates/multitrait" }
multiutil = { path = "crates/multiutil" }

[dependencies]
multibase = { workspace = true, optional = true }
multicodec = { workspace = true, optional = true }
multihash = { workspace = true, optional = true }
multisig = { workspace = true, optional = true }
multitrait = { workspace = true, optional = true }
multiutil = { workspace = true, optional = true }

[features]
multibase = ["dep:multibase"]
multicodec = ["dep:multicodec"]
multihash = ["dep:multihash"]
multisig = ["dep:multisig"]
multitrait = ["dep:multitrait"]
multiutil = ["dep:multiutil"]
default = []
